--- a/src/sciencePage/academiccouncil/academy.scss
+++ b/src/sciencePage/academiccouncil/academy.scss
@@ -1,89 +1,98 @@
-// *{
-//     margin: 0;
-//     padding: 0;
-//     box-sizing: border-box;
-//     bottom: 0;
-// }
 .academy {
-
     .container {
         max-width: 1300px;
         margin: 0;
         padding: 20px;
-
         background-color: #f8f8e8;
-        // border-radius: 10px;
 
         .title {
             color: #015c3f;
-            // font-size: 24px;
-            font-weight: bold;
-            font-family: Lato;
             font-weight: 900;
             font-size: 80px;
             line-height: 80px;
             letter-spacing: -4%;
-
         }
 
-        .description {
+        .description,
+        .text,
+        .list,
+        .contact {
             font-family: Lato;
             font-weight: 400;
             font-size: 35px;
             line-height: 35px;
             letter-spacing: 0%;
-            margin-top: 50px;
         }
 
         .subtitle {
             color: #015c3f;
-            font-size: 20px;
-            font-weight: bold;
-            margin-top: 100px;
-            font-family: Lato;
             font-weight: 700;
             font-size: 60px;
             line-height: 60px;
             letter-spacing: -2%;
-
         }
 
-
-        .text {
-            // font-size: 16px;
-            color: #333;
-            font-family: Lato;
-            font-weight: 400;
-            font-size: 35px;
-            line-height: 35px;
-            letter-spacing: 0%;
-
+        .list li {
+            margin-bottom: 20px;
         }
+    }
 
-        .list {
-            margin: 10px 0;
-            padding-left: 20px;
-            font-family: Lato;
-            font-weight: 400;
-            font-size: 35px;
-            line-height: 35px;
-            letter-spacing: 0%;
+    @media (max-width: 768px) {
+        .container {
+            padding: 18px;
 
-            li {
-                margin-bottom: 20px;
+            .title {
+                font-size: 55px;
+                line-height: 60px;
+            }
+
+            .description,
+            .text,
+            .list,
+            .contact {
+                font-size: 28px;
+                line-height: 30px;
+                margin-top: 20px;
+            }
+
+            .subtitle {
+                font-size: 40px;
+                line-height: 45px;
+                margin-top: 60px;
+            }
+
+            .list {
+                padding-left: 18px;
             }
         }
+    }
 
-        .contact {
-            // font-size: 16px;
-            font-weight: bold;
-            color: #015c3f;
-            font-family: Lato;
-            font-weight: 400;
-            font-size: 35px;
-            line-height: 35px;
-            letter-spacing: 0%;
+    @media (max-width: 360px) {
+        .container {
+            padding: 15px;
 
+            .title {
+                font-size: 40px;
+                line-height: 45px;
+            }
+
+            .description,
+            .text,
+            .list,
+            .contact {
+                font-size: 18px;
+                line-height: 25px;
+            }
+
+            .subtitle {
+                font-size: 30px;
+                line-height: 35px;
+                margin-top: 50px;
+            }
+
+            .list {
+                padding-left: 15px;
+            }
         }
     }
 }
