--- a/src/sciencePage/sciencecenter/science.scss
+++ b/src/sciencePage/sciencecenter/science.scss
@@ -1,18 +1,9 @@
-// *{
-//     margin: 0;
-//     padding: 0;
-//     box-sizing: border-box;
-//     bottom: 0;
-// }
 .sciense {
-
     .container {
         max-width: 1300px;
         margin: 0;
         padding: 20px;
-
         background-color: #f8f8e8;
-        // border-radius: 10px;
 
         .title {
             color: #015c3f;
@@ -27,12 +18,10 @@
             font-size: 35px;
             line-height: 35px;
             letter-spacing: 0%;
-
         }
 
         .subtitle {
             color: #015c3f;
-            // font-size: 20px;
             font-weight: bold;
             margin-top: 100px;
             font-family: Lato;
@@ -40,7 +29,6 @@
             font-size: 60px;
             line-height: 60px;
             letter-spacing: -2%;
-
         }
 
         .list {
@@ -51,11 +39,9 @@
             font-size: 35px;
             line-height: 35px;
             letter-spacing: 0%;
-        
 
             li {
                 margin-bottom: 20px;
-               
             }
         }
 
@@ -67,7 +53,62 @@
             font-size: 35px;
             line-height: 35px;
             letter-spacing: 0%;
+        }
+    }
 
+    @media (max-width: 768px) {
+        .container {
+            padding: 18px;
+
+            .title {
+                font-size: 55px;
+                line-height: 60px;
+            }
+
+            .description,
+            .list,
+            .contact {
+                font-size: 28px;
+                line-height: 30px;
+            }
+
+            .subtitle {
+                font-size: 40px;
+                line-height: 45px;
+                margin-top: 60px;
+            }
+
+            .list {
+                padding-left: 18px;
+            }
+        }
+    }
+
+    @media (max-width: 360px) {
+        .container {
+            padding: 15px;
+
+            .title {
+                font-size: 40px;
+                line-height: 45px;
+            }
+
+            .description,
+            .list,
+            .contact {
+                font-size: 18px;
+                line-height: 25px;
+            }
+
+            .subtitle {
+                font-size: 30px;
+                line-height: 35px;
+                margin-top: 50px;
+            }
+
+            .list {
+                padding-left: 15px;
+            }
         }
     }
 }
