--- a/src/sciencePage/scientificjournals/scientific.scss
+++ b/src/sciencePage/scientificjournals/scientific.scss
@@ -1,210 +1,197 @@
 .publicatinon {
-
-    .container {
+  .container {
       max-width: 1300px;
       margin: 0 auto;
-      // padding: 20px;
       padding: 40px 20px;
-      background-color: rgba(245, 245, 220, 1);
+      background-color: #f8f8e8;
 
-      .title{
-        color: #015c3f;
-        font-size: 80px;
-        font-weight: bold;
+      .title {
+          color: #015c3f;
+          font-size: 80px;
+          font-weight: bold;
       }
 
-      .description{ 
-        font-size: 35px;
+      .description {
+          font-size: 35px;
       }
-  
+
       &__title {
-        text-align: left;
-        color: #007a37;
-        font-size: 60px;
-        margin-top: 100px;
-        margin-bottom: 50px;
+          text-align: left;
+          color: #007a37;
+          font-size: 60px;
+          margin-top: 100px;
+          margin-bottom: 50px;
       }
-  
+
       &__list {
-        display: flex;
-        flex-direction: column;
+          display: flex;
+          flex-direction: column;
       }
-  
-    }
-  
-    .publication-card {
+  }
+
+  .publication-card {
       display: flex;
       background: linear-gradient(to right, rgba(245, 245, 220, 0.2), rgba(154, 14, 0, 0.2));
       margin: 20px 0;
       padding: 20px;
       border-radius: 8px;
       box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  
-  
+
       .publication-card__logo {
-        flex: 1;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        background-color: #ffffff;
-        margin-top: 66px;
-        margin-bottom: 67px;
-        margin-left: 15px;
-        padding: 20px;
-        font-size: 20px;
-        font-weight: bold;
-        color: #007a37;
-        text-align: center;
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+          flex: 1;
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+          background-color: #ffffff;
+          margin: 66px 15px 67px 15px;
+          padding: 20px;
+          font-size: 20px;
+          font-weight: bold;
+          color: #007a37;
+          text-align: center;
+          box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
       }
-  
+
       .publication-card__content {
-        flex: 3;
-        padding-left: 20px;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-  
-        .publication-card__title {
-          font-size: 30px;
-          font-weight: bold;
-          color: #007a37;
-          margin-top: 60px;
-          margin-bottom: 40px;
-        }
-  
-        .publication-card__description {
-          transform: translateY(-30px);  
-          font-size: 25px;
-          line-height: 1.6;
-          color: #333333;
-          margin-bottom: 10px;
-        }
-  
-        .publication-card__Link {
-          color: #007a37;
-          font-size: 16px;
-          text-decoration: none;
-          font-weight: bold;
-          align-self: flex-end;
-  
-          &:hover {
-            text-decoration: underline;
+          flex: 3;
+          padding-left: 20px;
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+
+          .publication-card__title {
+              font-size: 30px;
+              font-weight: bold;
+              color: #007a37;
+              margin-top: 60px;
+              margin-bottom: 40px;
           }
-        }
+
+          .publication-card__description {
+              transform: translateY(-30px);
+              font-size: 25px;
+              line-height: 1.6;
+              color: #333333;
+              margin-bottom: 10px;
+          }
+
+          .publication-card__Link {
+              color: #007a37;
+              font-size: 16px;
+              text-decoration: none;
+              font-weight: bold;
+              align-self: flex-end;
+
+              &:hover {
+                  text-decoration: underline;
+              }
+          }
       }
-    }
-  
   }
-  
-  
- 
-// @media (max-width: 480px) {
-//   .container {
-//     padding: 5px;
-    
-//     &__title {
-//       font-size: 18px;
-//       text-align: center;
-//     }
-    
-//     .description {
-//       font-size: 14px;
-//       text-align: justify;
-//     }
-//   }
 
-//   .publication-card {
-//     display: flex;
-//     flex-direction: column;
-//     align-items: center;
-//     text-align: center;
-//     padding: 10px;
-    
-//     &__logo {
-//       font-size: 16px;
-//       padding: 10px;
-//       margin-bottom: 5px;
-//     }
-    
-//     &__content {
-//       padding: 5px;
-//       width: 100%;
+  @media (max-width: 768px) {
+      .container {
+          padding: 30px 15px;
+          
 
-//       .publication-card__title {
-//         font-size: 16px;
-//         margin-bottom: 5px;
-//       }
+          .title {
+              font-size: 55px;
+              line-height: 60px;
+          }
 
-//       .publication-card__description {
-//         font-size: 12px;
-//         line-height: 1.4;
-//         margin-bottom: 8px;
-//       }
+          .description {
+              font-size: 28px;
+          }
 
-//       .publication-card__Link {
-//         font-size: 14px;
-//         align-self: center;
-//       }
-//     }
-//   }
-// }
+          &__title {
+              font-size: 40px;
+              margin-top: 60px;
+              margin-bottom: 30px;
+          }
+      }
 
+      .publication-card {
+          flex-direction: column;
+          padding: 15px;
 
-// @media (max-width: 768px) {
-//   .container {
-//     padding: 10px;
-    
-//     &__title {
-//       font-size: 24px;
-//       text-align: center;
-//     }
+          .publication-card__logo {
+              margin: 2px;
+              margin-left: 0;
+              margin-right: 400px;
+              padding: 15px;
+              font-size: 18px;
+          }
 
-//     .description {
-//       font-size: 18px;
-//       text-align: justify;
-//     }
-//   }
+          .publication-card__content {
+              padding-left: 0;
 
-//   .publication-card {
-//     display: flex;
-//     flex-direction: row;
-//     align-items: center;
-//     text-align: left;
-//     padding: 15px;
+              .publication-card__title {
+                  font-size: 26px;
+                  margin-top: 20px;
+                  margin-bottom: 20px;
+              }
 
-//     &__logo {
-//       font-size: 18px;
-//       padding: 15px;
-//       margin: 10px;
-//     }
+              .publication-card__description {
+                  font-size: 20px;
+                  transform: translateY(0);
+              }
 
-//     &__content {
-//       padding-left: 10px;
-//       flex: 1;
+              .publication-card__Link {
+                  font-size: 14px;
+              }
+          }
+      }
+  }
 
-//       .publication-card__title {
-//         font-size: 22px;
-//         margin-bottom: 8px;
-//       }
+  @media (max-width: 360px) {
+      .container {
+          padding: 20px 10px;
 
-//       .publication-card__description {
-//         font-size: 16px;
-//         line-height: 1.5;
-//         margin-bottom: 10px;
-//       }
+          .title {
+              font-size: 40px;
+              line-height: 45px;
+          }
 
-//       .publication-card__Link {
-//         font-size: 16px;
-//       }
-//     }
-//   }
-// }
+          .description {
+              font-size: 20px;
+              margin-top: 20px;
+          }
 
-  
-    
-   
-    
-    
-  
+          &__title {
+              font-size: 30px;
+              margin-top: 40px;
+              margin-bottom: 20px;
+          }
+      }
+
+      .publication-card {
+          flex-direction: column;
+          padding: 10px;
+
+          .publication-card__logo {
+              margin: 10px 10px;
+              padding: 90px;
+              font-size: 24px;
+          }
+
+          .publication-card__content {
+              padding-left: 0;
+
+              .publication-card__title {
+                  font-size: 22px;
+                  margin-top: 15px;
+                  margin-bottom: 15px;
+              }
+
+              .publication-card__description {
+                  font-size: 16px;
+              }
+
+              .publication-card__Link {
+                  font-size: 12px;
+              }
+          }
+      }
+  }
+}
